added login functionality on Blog page - incomplete

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -5,11 +5,12 @@
     </div>
 
 <div class="text-area">
-    <h2 class="content-title">Welcome to Ace Training Solutions</h2>
+    <h2 class="content-title">About Us</h2>
         <span>CTS was originally set up as Cumbria Training Services by Justine Douglas after having a strong desire to share a wealth of knowledge and skills gained from over 28 years experience in the Catering, Hospitality and Tourism industries. 
              <br /><br />15 years invaluable experience was spent with one of the UK's leading charter airlines Airtours/MyTravel Airways, now having merged with Thomas Cook. Roles ranged from Cabin Crew up to Cabin Crew Management.  In addition to the role of Cabin Crew, Justine was also a Cabin Crew Recruiter and a Sales Ambassador/Motivator, which involved, as well as regular flying duties, travelling  to 13 bases within the UK to motivate the Cabin Crew community to build relationships with customers and increase sales. During the role as a Cabin Crew Manager Justine looked after the welfare, development and training of teams from 35 up to 200 crew all over the UK.  2 winters were spent living in Helsinki, Finland managing a team of 40 Finnish Cabin Crew and overseeing the entire operation for the UK based airline working in very close partnership with Finnair.
              <br /><br />Justine is an experienced Customer Service Trainer who prides herself in "practicing what she preaches" and doesn't lose sight of how it feels to attend a training course: "I put myself in individuals shoes and think how would I feel if it was happening to me?"  Therefore, a learning environment is consistently created that is relaxed, friendly and where the atmosphere is engaging. Sharing different experiences, thoughts and ideas are encouraged and they bring the course to life giving it that unique, personalised edge.
              <br /><br />Justine adds "During my customer service training courses, if people like me, they are more likely to relax, participate openly and enjoy the training.  Exactly the same as customers:  if your customers like you, they are more likely to warm to you, to buy off you and to return".
         </span>
         <img src="images/staff-portrait.jpg" class="staff-portrait">
+
 </div>
