--- a/app/views/admin.html
+++ b/app/views/admin.html
@@ -2,9 +2,27 @@
     <h2 class="content-title">Blog</h2>
 
     <ul>
-        <li ng-repeat="message in messages">
-            {{message.name}}:
-            {{message.body}}
+        <div>
+            <h2>Add Post</h2>
+                <form class="form-inline" role="form" novalidate ng-submit="addPost()">
+                    <label for="name">Name:</label>
+                    <div class="form-group">
+                        <input type="text" id="name" class="form-control" ng-model="newPost.name" placeholder="Name">
+                    </div>
+                    <br />
+                    <label for="body">Body:</label>
+                    <div class="form-group">
+                        <input type="text" id="body" class="form-control" ng-model="newPost.body" placeholder="Body">
+                    </div>
+                    <input type="submit">
+                </form>
+        </div>
+        <li ng-repeat="post in posts">
+            <input type="text" ng-model="post.name" ng-blur="updatePost($index)">
+            <input type="text" ng-model="post.body" ng-blur="updatePost($index)">
+            <button type="button" class="close space" ng-click="removePost(post)">&times;</button>
+            <button type="button" class="close space" ng-click="moveDown(post)" ng-hide="getPostSize($index)">&DownArrow;</button>
+            <button type="button" class="close space" ng-click="moveUp(post)" ng-show="$index != 0">&UpArrow;</button>
         </li>
     </ul>
 </div>
