--- a/app/views/admin.html
+++ b/app/views/admin.html
@@ -10,16 +10,17 @@
                         <input type="text" id="name" class="form-control" ng-model="newPost.name" placeholder="Name">
                     </div>
                     <br />
-                    <label for="body">Body:</label>
+                    <label for="body">Message:</label>
                     <div class="form-group">
-                        <input type="text" id="body" class="form-control" ng-model="newPost.body" placeholder="Body">
+                        <input type="text" id="body" class="form-control" ng-model="newPost.message" placeholder="Body">
                     </div>
                     <input type="submit">
                 </form>
         </div>
         <li ng-repeat="post in posts">
             <input type="text" ng-model="post.name" ng-blur="updatePost($index)">
-            <input type="text" ng-model="post.body" ng-blur="updatePost($index)">
+            <input type="text" ng-model="post.message" ng-blur="updatePost($index)">
+            <input type="text" ng-model="post.date" ng-blur="updatePost($index)" ng-disabled="true">
             <button type="button" class="close space" ng-click="removePost(post)">&times;</button>
             <button type="button" class="close space" ng-click="moveDown(post)" ng-hide="getPostSize($index)">&DownArrow;</button>
             <button type="button" class="close space" ng-click="moveUp(post)" ng-show="$index != 0">&UpArrow;</button>
