--- a/app/views/login.html
+++ b/app/views/login.html
@@ -25,7 +25,7 @@
     </div>
     <div class="form-group">
         <div class="col-sm-offset-4 col-sm-10">
-            <button type="submit" class="btn btn-default" ng-click="login()">Login<</button>
+            <button type="submit" class="btn btn-default" ng-click="login()">Login</button>
         </div>
     </div>
 </form>
