--- a/app/views/blog.html
+++ b/app/views/blog.html
@@ -1,12 +1,11 @@
 <div class="text-area">
     <h2 class="content-title">Blog</h2>
 
-    <ul>
-        <li ng-repeat="post in posts">
+    <ul class="blog-posts">
+        <li>
             <div ng-class="{'triangle-border-top': $index % 2 == 0, 'triangle-border-bottom': $index % 2 != 0}">
-            <h2>{{post.name}}</h2>
-            <h4>{{post.date}}</h4>
-            <h5>{{post.message}}</h5>
+                <span class="blog-posts__name">fgfgfgfgfg</span> <span class="blog-posts__date">25/05/99<span>
+                <h5>fgfgfgfg</h5>
             </div>
         </li>
     </ul>
