--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -9,43 +9,50 @@
 
     <br />
     <br />
-
+<div class="container">
+<div class="form-container">
     <form class="form-horizontal" role="form">
-        <div class="form-group">
-            <label for="inputName" class="col-sm-4 control-label">Name</label>
-            <div class="col-sm-4">
-                <input type="text" class="form-control" id="inputName" placeholder="Name" ng-model="name" ng-required="true">
+        <!--<div class="form-group col-xs-4 " >-->
+            <label for="inputName" class="col-xs-4 control-label">Name</label>
+            <div class="col-xs-8">
+                <input type="text" class="form-control col-sm-1" id="inputName" placeholder="Name" ng-model="name" ng-required="true">
             </div>
-        </div>
-        <div class="form-group">
-            <label for="inputEmail" class="col-sm-4 control-label">Email</label>
-            <div class="col-sm-4">
-                <input type="Email" class="form-control" id="inputEmail" placeholder="Email" ng-model="email" ng-required="true">
+        <!--</div>-->
+        <!--<div class="form-group col-xs-4 " >-->
+            <label for="inputEmail" class="col-xs-4 control-label">Email</label>
+            <div class="col-xs-8">
+                <input type="Email" class="form-control col-sm-1" id="inputEmail" placeholder="Email" ng-model="email" ng-required="true">
             </div>
-        </div>
-
-        <div class="form-group">
-            <label for="inputPhoneNumber" class="col-sm-4 control-label">Phone Number</label>
-            <div class="col-sm-4">
-                <input type="number" class="form-control" id="inputPhoneNumber" placeholder="Phone Number" ng-model="phoneNumber" ng-required="true">
+        <!--</div>-->
+        <!--<div class="form-group col-xs-4 " >-->
+            <label for="inputPhoneNumber" class="col-xs-4 control-label">Phone Number</label>
+            <div class="col-xs-8">
+                <input type="number" class="form-control col-sm-1" id="inputPhoneNumber" placeholder="Phone Number" ng-model="phoneNumber" ng-required="true">
             </div>
-        </div>
-
-        <div class="form-group">
-            <label for="inputMessage" class="col-sm-4 control-label">Message</label>
-            <div class="col-sm-4">
-                <textarea class="form-control" id="inputMessage" ng-model="message" ng-required="true">
+        <!--</div>-->
+        <!--<div class="form-group col-xs-4 " >-->
+            <label for="inputMessage" class="col-xs-4 control-label">Message</label>
+            <div class="col-xs-8">
+                <textarea class="form-control col-sm-1" id="inputMessage" ng-model="message" ng-required="true">
                 </textarea>
             </div>
-        </div>
+        <!--</div>-->
 
         <div class="form-group">
-            <div class="col-sm-offset-4 col-sm-10">
-                <button type="submit" class="btn btn-default" ng-click="send()">Login</button>
+            <div class="col-sm-offset-4 col-sm-10 left">
+                <button type="submit" class="btn btn-default" ng-click="send()">Send</button>
             </div>
         </div>
     </form>
+</div>
 
+    <address>
+        <strong>Twitter, Inc.</strong><br>
+        795 Folsom Ave, Suite 600<br>
+        San Francisco, CA 94107<br>
+        <abbr title="Phone">P:</abbr> (123) 456-7890
+    </address>
+        </div>
     <br />
     <br />
     <br />
