--- a/app/styles/pages/contact.scss
+++ b/app/styles/pages/contact.scss
@@ -6,3 +6,23 @@
   width: 50%;
   float: left;
 }
+
+.centred-alert-text{
+  float: right;
+  height: 40px;
+  line-height: 40px;
+  width: 64%;
+  text-align: center;
+  font-weight: bold;
+}
+
+.send-button{
+  margin-left: 46.5%;
+  width: 29%;
+}
+
+.address{
+  position: relative;
+  top: 57px;
+  left: 30px;
+}
