--- a/app/styles/pages/home.scss
+++ b/app/styles/pages/home.scss
@@ -33,6 +33,8 @@
       background-color: #ffffff;
       display: block;
       width: 100%;
+      border-bottom-left-radius: 5px;
+      border-bottom-right-radius: 5px;
     }
 
     .information-square__title {
