--- a/app/styles/footer.scss
+++ b/app/styles/footer.scss
@@ -1,6 +1,6 @@
 #footer {
   width: 100%;
-  height: 250px;
+  height: 210px;
   position: relative;
   bottom: 0px;
   left: 0px;
@@ -40,7 +40,7 @@
     i {
       color: #ffffff;
       display: inline-block;
-      margin-top: 19px;
+      margin-top: 10px;
     }
 
     .icon-text{
@@ -57,13 +57,13 @@
 
     label{
       color: #ffffff;
-      margin-top: 19px;
+      margin-top: 10px;
     }
 
     ul {
       list-style: none;
-      margin: 0 auto;
-      display: inline;
+      display: inline-block;
+      padding: 10px 0 0 0;
 
       li {
         color: #ffffff;
