--- a/app/styles/header.scss
+++ b/app/styles/header.scss
@@ -15,6 +15,14 @@
   text-align: right;
   vertical-align: bottom;
 
+  i{
+    transition: ease-in-out 0.8s;
+    &:hover{
+      cursor: pointer;
+      transform: rotate(90deg);
+    }
+  }
+
   .header-container__navigation-links {
 
     list-style: none;
@@ -37,26 +45,27 @@
   }
 }
 
-.icon{
-  height: 38px;
-  margin: 8px 5px 0 5px;
-  line-height: 38px !important;
-  border-radius: 10px;
 
-  &:hover{
-    opacity: 0.5;
-    cursor: pointer;
-  }
+.fa-facebook{
+  background: #3B5998;
+  color: #FFFFFF;
+  padding: 0.1em 0.33em;
 }
 
-.facebook, .twitter{
-  @extend .icon;
-  color: white;
-  background-color: blue;
+.fa-youtube{
+  background: #bb0000;
+  color: #FFFFFF;
+  padding: 0.1em 0.14em;
 }
 
-.youtube{
-  @extend .icon;
-  color: #ffffff;
-  background-color: red;
+.fa-twitter{
+  background: #4099FF;
+  color: #FFFFFF;
+  padding: 0.05em 0.07em;
+}
+
+.circle{
+  border-radius: 50%;
+  margin: 0.15em;
+  font-size: 3em;
 }
