--- a/app/views/blog.html
+++ b/app/views/blog.html
@@ -1,17 +1,36 @@
-<div class="text-area">
-    <h2 class="content-title">Blog</h2>
+<div class="outer-container">
+    <div class="text-area">
+        <h2 class="content-title">Blog</h2>
+        <div class="button-container">
+            <button ng-click="(getPreviousFivePosts())" ng-show="currentPage != 0" class="btn btn-primary left">Previous five posts</button>
+            <button ng-click="(getNextFivePosts())" ng-show="posts.length == 5" class="btn btn-primary right">Next five posts</button>
+            <!--TODO this wont work if the number of items in firebase is divisible by 5 % 2 = 0-->
+        </div>
 
-    <ul class="blog-posts">
-        <li>
-            <div ng-class="{'triangle-border-top': $index % 2 == 0, 'triangle-border-bottom': $index % 2 != 0}">
-                <span class="blog-posts__name">fgfgfgfgfg</span> <span class="blog-posts__date">25/05/99<span>
-                <h5>fgfgfgfg</h5>
-            </div>
-        </li>
-    </ul>
+        <br />
+        <br />
 
-    <button ng-click="(getPreviousFivePosts())" ng-show="currentPage != 0">Previous</button>
-    <button ng-click="(getNextFivePosts())" ng-show="posts.length == 5">Next</button>
-    <!--TODO this wont work if the number of items in firebase is divisible by 5 % 2 = 0-->
+        <ul class="blog-posts">
+            <li ng-repeat="post in posts">
+                <div ng-class="{'triangle-border-top': $index % 2 == 0, 'triangle-border-bottom': $index % 2 != 0}">
+                    <div class="blog-posts__header-container">
+                        <span class="blog-posts__date">Date : {{post.date}}</span>
+                        <span class="blog-posts__name">Written by : {{post.name}}</span>
+                    </div>
+                    <br />
+                    <span class="blog-posts__title">{{post.title}}</span>
+                    <h5>{{post.message}}</h5>
+                </div>
+            </li>
+        </ul>
 
+        <div class="button-container">
+            <button ng-click="(getPreviousFivePosts())" ng-show="currentPage != 0" class="btn btn-primary left">Previous five posts</button>
+            <button ng-click="(getNextFivePosts())" ng-show="posts.length == 5" class="btn btn-primary right">Next five posts</button>
+            <!--TODO this wont work if the number of items in firebase is divisible by 5 % 2 = 0-->
+        </div>
+        <br />
+        <br />
+        <br />
+    </div>
 </div>
