--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -12,41 +12,48 @@
 <div class="container">
 <div class="form-container">
     <form class="form-horizontal" role="form">
-        <!--<div class="form-group col-xs-4 " >-->
-            <label for="inputName" class="col-xs-4 control-label">Name</label>
+
+        <label for="inputName" class="col-xs-4 control-label"><br />Name</label>
             <div class="col-xs-8">
+                <br />
                 <input type="text" class="form-control col-sm-1" id="inputName" placeholder="Name" ng-model="name" ng-required="true">
             </div>
-        <!--</div>-->
-        <!--<div class="form-group col-xs-4 " >-->
-            <label for="inputEmail" class="col-xs-4 control-label">Email</label>
+
+        <label for="inputEmail" class="col-xs-4 control-label"><br />Email</label>
             <div class="col-xs-8">
+                <br />
                 <input type="Email" class="form-control col-sm-1" id="inputEmail" placeholder="Email" ng-model="email" ng-required="true">
             </div>
-        <!--</div>-->
-        <!--<div class="form-group col-xs-4 " >-->
-            <label for="inputPhoneNumber" class="col-xs-4 control-label">Phone Number</label>
+
+        <label for="inputPhoneNumber" class="col-xs-4 control-label"><br />Phone Number</label>
             <div class="col-xs-8">
+                <br />
                 <input type="number" class="form-control col-sm-1" id="inputPhoneNumber" placeholder="Phone Number" ng-model="phoneNumber" ng-required="true">
             </div>
-        <!--</div>-->
-        <!--<div class="form-group col-xs-4 " >-->
-            <label for="inputMessage" class="col-xs-4 control-label">Message</label>
+
+        <label for="inputMessage" class="col-xs-4 control-label"><br />Message</label>
             <div class="col-xs-8">
+                <br />
                 <textarea class="form-control col-sm-1" id="inputMessage" ng-model="message" ng-required="true">
                 </textarea>
             </div>
-        <!--</div>-->
 
         <div class="form-group">
             <div class="col-sm-offset-4 col-sm-10 left">
-                <button type="submit" class="btn btn-default" ng-click="send()">Send</button>
+                <br />
+                <button type="submit" class="btn btn-default send-button" ng-click="send()">Send</button>
             </div>
         </div>
     </form>
+
+    <div class="alert-success centred-alert-text" ng-show="sent == true && response == 'success'">Thank you, we will be in touch shortly</div>
+    <div class="alert-danger centred-alert-text" ng-show="sent == true && response != 'success'">Sorry, something went wrong. Please try again</div>
+
+
 </div>
 
-    <address>
+    <address class="address">
+        <br />
         <strong>Twitter, Inc.</strong><br>
         795 Folsom Ave, Suite 600<br>
         San Francisco, CA 94107<br>
