removed all images from app - images now hosted on S3

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,6 +1,6 @@
 <div class="about-container">
     <p>
-<img src="images/home-stock-image-4.jpg" class="stock-image">
+<img src="https://s3-eu-west-1.amazonaws.com/ace-training-services/home/home-stock-image-4.jpg" class="stock-image">
     </p>
 </div>
 
@@ -11,7 +11,7 @@
              <br /><br />Justine is an experienced Customer Service Trainer who prides herself in "practicing what she preaches" and doesn't lose sight of how it feels to attend a training course: "I put myself in individuals shoes and think how would I feel if it was happening to me?"  Therefore, a learning environment is consistently created that is relaxed, friendly and where the atmosphere is engaging. Sharing different experiences, thoughts and ideas are encouraged and they bring the course to life giving it that unique, personalised edge.
              <br /><br />Justine adds "During my customer service training courses, if people like me, they are more likely to relax, participate openly and enjoy the training.  Exactly the same as customers:  if your customers like you, they are more likely to warm to you, to buy off you and to return".
         </span>
-        <img src="images/staff-portrait.jpg" class="staff-portrait">
+        <img src="https://s3-eu-west-1.amazonaws.com/ace-training-services/about/staff-portrait.jpg" class="staff-portrait">
 
 </div>
         <br />
