--- a/app/styles/font-awesome.scss
+++ b/app/styles/font-awesome.scss
@@ -3,15 +3,15 @@
  *  License - http://fontawesome.io/license (Font: SIL OFL 1.1, CSS: MIT License)
  */
 
-@import "../../../../Downloads/font-awesome-4.2.0/scss/variables";
-@import "../../../../Downloads/font-awesome-4.2.0/scss/mixins";
-@import "../../../../Downloads/font-awesome-4.2.0/scss/path";
-@import "../../../../Downloads/font-awesome-4.2.0/scss/core";
-@import "../../../../Downloads/font-awesome-4.2.0/scss/larger";
-@import "../../../../Downloads/font-awesome-4.2.0/scss/fixed-width";
-@import "../../../../Downloads/font-awesome-4.2.0/scss/list";
-@import "../../../../Downloads/font-awesome-4.2.0/scss/bordered-pulled";
-@import "../../../../Downloads/font-awesome-4.2.0/scss/spinning";
-@import "../../../../Downloads/font-awesome-4.2.0/scss/rotated-flipped";
-@import "../../../../Downloads/font-awesome-4.2.0/scss/stacked";
-@import "../../../../Downloads/font-awesome-4.2.0/scss/icons";
+@import "font/variables";
+@import "font/mixins";
+@import "font/path";
+@import "font/core";
+@import "font/larger";
+@import "font/fixed-width";
+@import "font/list";
+@import "font/bordered-pulled";
+@import "font/spinning";
+@import "font/rotated-flipped";
+@import "font/stacked";
+@import "font/icons";
