--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -29,6 +29,7 @@
             <div class="col-xs-8">
                 <br />
                 <input type="number" class="form-control col-sm-1" id="inputPhoneNumber" placeholder="Phone Number" ng-model="phoneNumber" ng-required="true">
+              <br />
             </div>
 
         <label for="inputMessage" class="col-xs-4 control-label"><br />Message</label>
@@ -41,7 +42,7 @@
         <div class="form-group">
             <div class="col-sm-offset-4 col-sm-10 left">
                 <br />
-                <button type="submit" class="btn btn-default send-button" ng-click="send()">Send</button>
+                <button type="submit" class="btn btn-default send-button" style="margin-top: 30px" ng-click="send()">Send</button>
             </div>
         </div>
     </form>
