--- a/app/styles/header.scss
+++ b/app/styles/header.scss
@@ -1,19 +1,37 @@
+@import "./mixins/breakpoint";
+
 .header{
   height: 120px;
   background-color: #000000;
+
+  @include breakpoint(mobile-portrait) {
+    height: 80px;
+  }
+  @include breakpoint(mobile-landscape) {
+    height: 80px;
+  }
 }
 
 .header-container__logo{
   float: left;
   margin-left: 20px;
   margin-top: 10px;
+  max-width: 300px;
+  max-height: 98px;
+  height: auto;
+  width: 50%;
+
 }
 
 .header__header-container{
 
-  margin-right: 200px;
+  margin-right: 90px;
   text-align: right;
   vertical-align: bottom;
+
+  @include breakpoint(tablet-portrait){
+    margin-right:25px;
+  }
 
   i{
     transition: ease-in-out 0.8s;
@@ -27,6 +45,13 @@
 
     list-style: none;
 
+    @include breakpoint(mobile-landscape){
+      display: none !important;
+    }
+    @include breakpoint(mobile-portrait) {
+      display: none !important;
+    }
+
     .navigation-links__list-item{
       display: inline;
     }
@@ -35,6 +60,14 @@
       color: #ffffff;
       padding: 0 10px 0 10px;
       font-size: 30px;
+
+      @include breakpoint(tablet-portrait){
+        font-size: 28px;
+      }
+
+      @include breakpoint(phablet){
+        font-size: 19px;
+      }
 
       &:hover{
         cursor: pointer;
@@ -46,10 +79,63 @@
 }
 
 
+.header-container__nav-bar {
+
+
+  width: 125px;
+  text-align: center;
+  display: none;
+  float: right;
+
+//  right: 15px;
+//  top: -4px;
+
+
+  .nav-collapse{
+    background-color: #000000;
+    position: absolute;
+    z-index: 1000;
+    right: 0px;
+    top: 60px;
+  }
+
+  @include breakpoint(mobile-portrait) {
+    display: block;
+  }
+  @include breakpoint(mobile-landscape) {
+    display: block;
+  }
+
+  button{
+
+    float: right;
+    height: 45px;
+    width: 50px;
+    margin-top: 15px;
+      }
+}
+
+
 .fa-facebook{
   background: #3B5998;
   color: #FFFFFF;
   padding: 0.1em 0.33em;
+  }
+
+.fa-2x{
+  @include breakpoint(tablet-portrait){
+  font-size: 2em !important;
+  }
+
+  @include breakpoint(mobile-landscape){
+    display: none !important;
+  }
+  @include breakpoint(mobile-portrait) {
+    display: none !important;
+  }
+
+
+
 }
 
 .fa-youtube{
