--- a/app/styles/mixins/content-title.scss
+++ b/app/styles/mixins/content-title.scss
@@ -1,3 +1,5 @@
+@import './mixins/breakpoint';
+
 @mixin content-title($leftColour, $middleColour, $rightColour) {
   border-bottom: 5px solid $middleColour;
   font-family: Century Gothic, sans-serif;
@@ -12,6 +14,14 @@
     width: 34%;
     height: 5px;
     background: $leftColour;
+
+    @include breakpoint(mobile-portrait){
+      width: 50%;
+    }
+
+    @include breakpoint(phablet){
+      width: 50%;
+    }
   }
 
   &:after{
@@ -22,5 +32,13 @@
     width: 34%;
     height: 5px;
     background: $rightColour;
+
+    @include breakpoint(mobile-portrait){
+      width: 50%;
+    }
+
+    @include breakpoint(phablet){
+      width: 50%;
+    }
   }
 }
