--- a/app/views/products.html
+++ b/app/views/products.html
@@ -8,7 +8,7 @@
     <ul class="information-container">
         <li class="information-container__information-square" ng-repeat="product in products">
             <div class="information-square__title">{{product.title}}</div>
-            <img ng-src="{{product.image}}" width="300" height="150">
+            <img ng-src="{{product.image}}" width="300" height="150" class="information-container__image">
             <span class="information-square__summary">{{product.summary}}</span>
         </li>
     </ul>
@@ -16,7 +16,7 @@
 <div>
 
         <br />
-<div style="width: 50%; margin: 0 auto;">
+<div style="width: 86%; margin: 0 auto;">
     <accordion close-others="true">
         <accordion-group is-open="status.heading1">
             <accordion-heading>
